# codedojo

./: .gitignore  .gitignore.txt  ICON_GUIDE.md  LICENSE  README.md  app.py  create_shortcuts.vbs  main.js  package-lock.json  package.json  problem_bank.py  pyproject.toml  requirements.txt  run_codedojo.bat  run_codedojo.command  run_codedojo.vbs  setup_mac.command  setup_windows.bat  setup_windows.vbs  test_robust_parsing.py
CodeDojo.app/Contents/: Info.plist
CodeDojo.app/Contents/MacOS/: launch
CodeDojo.app/Contents/Resources/: .gitkeep
data/: PythonBasic100Q.json  problems.json  wrong_notes.md
docs/: BEGINNER_GUIDE.md
scripts/: categorize_python_problems.py  test_changes.py
