[project]
name = "codedojo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "audioop-lts>=0.2.1",
    "dotenv>=0.9.9",
    "gradio>=4.44.1",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "setuptools>=68.0.0",
    "sniffio>=1.3.1",
]
